// Vitest Snapshot v1

exports[`test eslint > alreadySplitted > fixed 1`] = `
"import { Fragment } from 'react';
import cs from 'classnames';
function Component() {
  return (
    <Fragment>
      <p
        className={cs(
          'wow text-white text-sm text-center something',
          'something so py-2 mt-8 many foo font-semibold else',
          'color classe',
          true ? 'hello' : 'hi'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > callArgumentTooLong > fixed 1`] = `
"import { Fragment } from 'react';
import cs from 'classnames';
function Component() {
  return (
    <Fragment>
      <p
        className={cs(
          'text-white text-sm text-center something something',
          'py-2 mt-8 foo font-semibold else color classe',
          true ? 'hello' : 'hi'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > regression1 > fixed 1`] = `
"import cs from 'classnames';
function Component() {
  return (
    <Fragment>
      <p
        className={cs(
          'whitespace-pre-wrap text-gray-700 max-w-max',
          'flex appearance-none hover:underline first:pt-0',
          'dark:text-gray-100 pt-[1em]',
          hClasses[level] || '',
          className
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > shouldNotRun > fixed 1`] = `
"import cs from 'classnames';
function Component() {
  return (
    <Fragment>
      <p
        className={cs(
          'wow text-white text-sm text-center something',
          'something so py-2 mt-8 many foo font-semibold else',
          'color classe',
          true ? 'hello' : 'hi'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > simple > fixed 1`] = `
"import classNames from 'classnames';

function Component() {
  return (
    <Fragment>
      <p
        className={classNames(
          'w-full text-white text-sm text-center rounded-md',
          'py-2 mt-8 font-semibold border-black border block',
          'bg-gray-900 hover:cursor-pointer hover:bg-gray-700',
          'disabled:opacity-60 disabled:bg-gray-900 w-[340px]',
          'sm:h-[60em]'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > withCsImport > fixed 1`] = `
"import { Fragment } from 'react';
import cs from 'classnames';
function Component() {
  return (
    <Fragment>
      <p
        className={cs(
          'text-white text-sm text-center something py-2',
          'mt-8 foo font-semibold color classe'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > withImports > fixed 1`] = `
"import classNames from 'classnames';

import { Fragment } from 'react';
function Component() {
  return (
    <Fragment>
      <p
        className={classNames(
          'w-full text-white text-sm text-center rounded-md',
          'py-2 mt-8 font-semibold border-black border block',
          'bg-gray-900 hover:cursor-pointer hover:bg-gray-700',
          'disabled:opacity-60 disabled:bg-gray-900 w-[340px]',
          'sm:h-[60em]'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > withManyClassnames > fixed 1`] = `
"import classNames from 'classnames';

function Component() {
  return (
    <Fragment>
      <p
        className={classNames(
          'w-full text-white text-sm text-center rounded-md',
          'py-2 mt-8 font-semibold border-black border block',
          'bg-gray-900 hover:cursor-pointer hover:bg-gray-700',
          'disabled:opacity-60 disabled:bg-gray-900 w-[340px]',
          'sm:h-[60em]'
        )}
      />
      <p
        className={classNames(
          'w-full text-white text-sm text-center rounded-md',
          'py-2 mt-8 font-semibold border-black border block',
          'bg-gray-900 hover:cursor-pointer hover:bg-gray-700',
          'disabled:opacity-60 disabled:bg-gray-900 w-[340px]',
          'sm:h-[60em]'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > withTemplateLiteral > fixed 1`] = `
"import classNames from 'classnames';

import { Fragment } from 'react';
function Component() {
  return (
    <Fragment>
      <p
        className={classNames(
          'text-white text-sm text-center something py-2',
          'mt-8 foo font-semibold color classe',
          true ? 'hello' : 'hi'
        )}
      />
    </Fragment>
  );
}
"
`;

exports[`test eslint > withTypescript > fixed 1`] = `
"import classNames from 'classnames';

function Component(x: SomeType) {
  return (
    <Fragment>
      <p
        className={classNames(
          'w-full text-white text-sm text-center rounded-md',
          'py-2 mt-8 font-semibold border-black border block',
          'bg-gray-900 hover:cursor-pointer hover:bg-gray-700',
          'disabled:opacity-60 disabled:bg-gray-900 w-[340px]',
          'sm:h-[60em]'
        )}
      />
    </Fragment>
  );
}
"
`;
